Correct alignment of invoice details

--- a/styles/_invoice-view.scss
+++ b/styles/_invoice-view.scss
@@ -266,7 +266,6 @@ body {
                 &__group-first {
                     flex-basis: 80%;
                     display: flex;
-                    justify-content: space-between;
                 }
     
                 &__group-second {
@@ -281,10 +280,54 @@ body {
     
                 &__quantity {
                     flex-basis: 10%;
-                    text-align: right;
+                    text-align: center;
                 }
     
                 &__price {
+                    flex-basis: 20%;
+                    text-align: right;
+                }
+            }
+
+            .invoice-item {
+    
+                &:last-child {
+                    margin-bottom: ToEmOrRem(0, rem);
+                }
+    
+                &__description {
+                    flex-direction: row;
+                    justify-content: flex-start;
+                    align-items: center;
+                    flex-basis: 80%;
+    
+                    .label {
+                        margin-bottom: 0;
+                        flex-basis: 50%;
+                    }
+
+                    .details {
+                        display: flex;
+                        justify-content: space-between;
+                        flex-basis: 30%;
+
+                        .quantity {
+                            flex-basis: 30%;
+                            text-align: center;
+
+                            .multiplier {
+                                display: none;
+                            }
+                        }
+
+                        .price {
+                            flex-basis: 70%;
+                            text-align: right;
+                        }
+                    }
+                }
+
+                &__amount {
                     flex-basis: 20%;
                     text-align: right;
                 }
