--- a/styles/styles.css
+++ b/styles/styles.css
@@ -561,9 +561,6 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
   }
   .invoice-details__third .invoice-items-heading__group-second {
     display: -webkit-box;
@@ -582,9 +579,59 @@ body {
   .invoice-details__third .invoice-items-heading__quantity {
     -ms-flex-preferred-size: 10%;
         flex-basis: 10%;
-    text-align: right;
+    text-align: center;
   }
   .invoice-details__third .invoice-items-heading__price {
+    -ms-flex-preferred-size: 20%;
+        flex-basis: 20%;
+    text-align: right;
+  }
+  .invoice-details__third .invoice-item:last-child {
+    margin-bottom: 0rem;
+  }
+  .invoice-details__third .invoice-item__description {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-preferred-size: 80%;
+        flex-basis: 80%;
+  }
+  .invoice-details__third .invoice-item__description .label {
+    margin-bottom: 0;
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+  }
+  .invoice-details__third .invoice-item__description .details {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-preferred-size: 30%;
+        flex-basis: 30%;
+  }
+  .invoice-details__third .invoice-item__description .details .quantity {
+    -ms-flex-preferred-size: 30%;
+        flex-basis: 30%;
+    text-align: center;
+  }
+  .invoice-details__third .invoice-item__description .details .quantity .multiplier {
+    display: none;
+  }
+  .invoice-details__third .invoice-item__description .details .price {
+    -ms-flex-preferred-size: 70%;
+        flex-basis: 70%;
+    text-align: right;
+  }
+  .invoice-details__third .invoice-item__amount {
     -ms-flex-preferred-size: 20%;
         flex-basis: 20%;
     text-align: right;
